Home page coding
Not completely done, but the elements of the home page.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/Portfolio Fonts/stylesheet.css" type="text/css" charset="utf-8" />
 </head>
+
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
+  <section class="home">
+    <header class="navigation">
+      <div class="inline-block logo">
+        <img src="/images/logo.png">
+      </div>
+      <nav class="inline-block">
+        <ul>
+          <li class="inline-block">about</li>
+          <li class="inline-block">skills</li>
+          <li class="inline-block">work</li>
+          <li class="inline-block">contact</li>
+        </ul>
+      </nav>
+    </header>
+    <section class="heroImg">
+      <div class="content">
+          <div class="welcome">
+            <img src="/images/star.png" height="384px">
+            <h1>Welcome!</h1>
+          </div>
+          <h2>I’m Megan Guire, a freelance UX/UI designer creating things that make people smile.</h2>
+        <button>Download Resume</button>
+      </div>
+    </section>
+  </section>
+  <footer>
+    <ul>
+      <li class="inline-block">About</li>
+      <li class="inline-block">Skills</li>
+      <li class="inline-block">Work</li>
+      <li class="inline-block">Contact</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
