--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <title>Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/Portfolio Fonts/stylesheet.css" type="text/css" charset="utf-8" />
 </head>
@@ -10,7 +13,7 @@
   <section class="home">
     <header class="navigation">
       <div class="inline-block logo">
-        <img src="/images/logo.png">
+        <img src="/images/logo.png" height="45px">
       </div>
       <nav class="inline-block">
         <ul>
@@ -22,12 +25,14 @@
       </nav>
     </header>
     <section class="heroImg">
-      <div class="content">
-          <div class="welcome">
-            <img src="/images/star.png" height="384px">
-            <h1>Welcome!</h1>
+      <div class="container">
+        <div class="leftSide">
+          <div class="star">
+            <img src="/images/star.png" height="476px">
+            <h1 class="welcome">welcome!</h1>
           </div>
-          <h2>I’m Megan Guire, a freelance UX/UI designer creating things that make people smile.</h2>
+          <h2 class="tagline">I’m Megan Guire, a freelance UX/UI designer creating things that make people smile.</h2>
+        </div>
         <button>Download Resume</button>
       </div>
     </section>
